--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = ""
 authors = ["Jongkook Choi"]
 
 [tool.poetry.dependencies]
-python = "3.9.0"
+python = "3.8.6"
 shap = "^0.37.0"
 jupyter = "^1.0.0"
 tensorflow = "^2.3.1"
 pandas = "^1.1.4"
 matplotlib = "^3.3.3"
 sklearn = "^0.0"
+SQLAlchemy = "^1.3.20"
 
 [tool.poetry.dev-dependencies]
 
