--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pandas = "^1.1.4"
 matplotlib = "^3.3.3"
 sklearn = "^0.0"
 SQLAlchemy = "^1.3.20"
+Jinja2 = "^2.11.2"
+pdfkit = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 
