--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ sklearn = "^0.0"
 SQLAlchemy = "^1.3.20"
 Jinja2 = "^2.11.2"
 pdfkit = "^0.6.1"
+seaborn = "^0.11.0"
 
 [tool.poetry.dev-dependencies]
 
