Problem 3 Solved, TODO : generate report

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ SQLAlchemy = "^1.3.20"
 Jinja2 = "^2.11.2"
 pdfkit = "^0.6.1"
 seaborn = "^0.11.0"
+pydot = "^1.4.1"
+graphviz = "^0.15"
 
 [tool.poetry.dev-dependencies]
 
