--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ SQLAlchemy = "^1.3.20"
 seaborn = "^0.11.0"
 pydot = "^1.4.1"
 graphviz = "^0.15"
+eli5 = "^0.10.1"
+PDPbox = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 
