--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ poetry.lock
 # 사전과제 내용과 결과물은 외부에 유출되지 않도록 유의해주세요.
 ######################
 data/
-result/
+# result/
 
 ######################
 # Python             #
